@@ -35,9 +35,10 @@ import meteordevelopment.orbit.EventHandler;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.block.NoteBlock;
-import net.minecraft.block.enums.NoteBlockInstrument;
+import net.minecraft.block.enums.Instrument;
 import net.minecraft.network.packet.c2s.play.PlayerActionC2SPacket;
 import net.minecraft.network.packet.c2s.play.PlayerInteractBlockC2SPacket;
+import net.minecraft.server.network.ServerPlayNetworkHandler;
 import net.minecraft.sound.SoundEvents;
 import net.minecraft.util.Hand;
 import net.minecraft.util.hit.BlockHitResult;
@@ -254,7 +255,7 @@ public class Notebot extends Module {
     public Notebot() {
         super(Categories.Misc, "notebot", "Plays noteblock nicely");
 
-        for (NoteBlockInstrument inst : NoteBlockInstrument.values()) {
+        for (Instrument inst : Instrument.values()) {
             NotebotUtils.OptionalInstrument optionalInstrument = NotebotUtils.OptionalInstrument.fromMinecraftInstrument(inst);
             if (optionalInstrument != null) {
                 sgNoteMap.add(new EnumSetting.Builder<NotebotUtils.OptionalInstrument>()
@@ -473,7 +474,7 @@ public class Notebot extends Module {
         // Modifiable list of unique notes
         List<Note> uniqueNotesToUse = new ArrayList<>(song.getRequirements());
         // A map with noteblocks that have incorrect note level
-        Map<NoteBlockInstrument, List<BlockPos>> incorrectNoteBlocks = new HashMap<>();
+        Map<Instrument, List<BlockPos>> incorrectNoteBlocks = new HashMap<>();
 
         // Check if there are already tuned noteblocks
         for (var entry : scannedNoteblocks.asMap().entrySet()) {
@@ -482,7 +483,7 @@ public class Notebot extends Module {
 
             if (uniqueNotesToUse.contains(note)) {
                 // Add correct noteblock position to a noteBlockPositions
-                noteBlockPositions.put(note, noteblocks.removeFirst());
+                noteBlockPositions.put(note, noteblocks.remove(0));
                 uniqueNotesToUse.remove(note);
             }
 
@@ -502,7 +503,7 @@ public class Notebot extends Module {
             List<BlockPos> positions = entry.getValue();
 
             if (mode.get() == NotebotUtils.NotebotMode.ExactInstruments) {
-                NoteBlockInstrument inst = entry.getKey();
+                Instrument inst = entry.getKey();
 
                 List<Note> foundNotes = uniqueNotesToUse.stream()
                     .filter(note -> note.getInstrument() == inst)
@@ -513,7 +514,7 @@ public class Notebot extends Module {
                 for (BlockPos pos : positions) {
                     if (foundNotes.isEmpty()) break;
 
-                    Note note = foundNotes.removeFirst();
+                    Note note = foundNotes.remove(0);
                     noteBlockPositions.put(note, pos);
 
                     uniqueNotesToUse.remove(note);
@@ -522,7 +523,7 @@ public class Notebot extends Module {
                 for (BlockPos pos : positions) {
                     if (uniqueNotesToUse.isEmpty()) break;
 
-                    Note note = uniqueNotesToUse.removeFirst();
+                    Note note = uniqueNotesToUse.remove(0);
                     noteBlockPositions.put(note, pos);
                 }
             }
@@ -765,8 +766,8 @@ public class Notebot extends Module {
     private void scanForNoteblocks() {
         if (mc.interactionManager == null || mc.world == null || mc.player == null) return;
         scannedNoteblocks.clear();
-        int min = (int) (-mc.player.getBlockInteractionRange()) - 2;
-        int max = (int) mc.player.getBlockInteractionRange() + 2;
+        int min = (int) (-mc.interactionManager.getReachDistance()) - 2;
+        int max = (int) mc.interactionManager.getReachDistance() + 2;
 
         // Scan for noteblocks horizontally
         // 6^3 kek
@@ -779,7 +780,9 @@ public class Notebot extends Module {
                     if (blockState.getBlock() != Blocks.NOTE_BLOCK) continue;
 
                     // Copied from ServerPlayNetworkHandler#onPlayerInteractBlock
-                    if (!mc.player.canInteractWithBlockAt(pos, 1)) continue;
+                    Vec3d vec3d2 = Vec3d.ofCenter(pos);
+                    double sqDist = mc.player.getEyePos().squaredDistanceTo(vec3d2);
+                    if (sqDist > ServerPlayNetworkHandler.MAX_BREAK_SQUARED_DISTANCE) continue;
 
                     if (!isValidScanSpot(pos)) continue;
 
@@ -787,6 +790,7 @@ public class Notebot extends Module {
                     scannedNoteblocks.put(note, pos);
                 }
             }
+
         }
     }
 
@@ -936,13 +940,13 @@ public class Notebot extends Module {
     }
 
     /**
-     * Gets an NoteBlockInstrument from Note Map
+     * Gets an Instrument from Note Map
      *
      * @param inst An instrument
      * @return A new instrument mapped by instrument given in parameters
      */
     @Nullable
-    public NoteBlockInstrument getMappedInstrument(@NotNull NoteBlockInstrument inst) {
+    public Instrument getMappedInstrument(@NotNull Instrument inst) {
         if (mode.get() == NotebotUtils.NotebotMode.ExactInstruments) {
             NotebotUtils.OptionalInstrument optionalInstrument = (NotebotUtils.OptionalInstrument) sgNoteMap.getByIndex(inst.ordinal()).get();
             return optionalInstrument.toMinecraftInstrument();
